@@ -3,7 +3,6 @@
     [X] Accept the seed
     [ ] Test reuse of the seed (Blocked on retrieving values from fork_subtest)
 [-] model file modifying DBIC::SL
-    [ ] Improve error message for validation failures
     [ ] Relationships (has_many / belongs_to)
         [ ] Validate the foreign source exists
         [ ] Validate the columns exist
@@ -16,11 +15,11 @@
         [ ] child requirements
     [/] Columns
         [/] Set a value to an array of scalars (Unsupported by Sims)
-[ ] Change to use table name only instead of model name.
 [ ] Rename tests to remove /^\d\d_/
 [ ] Write documentation
     * This is done via direct edit on DockerHub.
     * Can we automate this like github.com/docker-library/docs?
+[ ] Improve error messages for model validation failures
 [ ] Write a test that demonstrates a multi-column relationship
 [ ] Write a test that demonstrates a multi-column primary key
 [ ] Write a test that demonstrates a M2M relationship
@@ -130,3 +129,4 @@ load_sims CMD \
         [X] Add a multi-column unique constraint
     [X] Add validations for the expected structure of the model file
         [X] Require only one key for <model>-<column>-{type}
+[X] Change to use table name only instead of model name.
